--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@sveltejs/adapter-static": "^3.0.6",
     "@sveltejs/kit": "^2.9.0",
     "@sveltejs/vite-plugin-svelte": "^5.0.0",
+    "@types/randomcolor": "^0.5.9",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.7.0",
     "eslint-config-prettier": "^9.1.0",
@@ -41,6 +42,7 @@
   "dependencies": {
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/typography": "^0.5.15",
-    "immutable": "^5.0.3"
+    "immutable": "^5.0.3",
+    "randomcolor": "^0.6.2"
   }
 }
