--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "vitest": "^2.0.4"
   },
   "dependencies": {
+    "@std/text": "npm:@jsr/std__text@^1.0.9",
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/typography": "^0.5.15",
     "drag-drop-touch": "^1.3.1",
