--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/typography": "^0.5.15",
     "drag-drop-touch": "^1.3.1",
+    "hotkeys-js": "^3.13.9",
     "immutable": "^5.0.3",
     "randomcolor": "^0.6.2"
   }
