--- a/package.json
+++ b/package.json
@@ -12,12 +12,10 @@
     "format": "prettier --write .",
     "lint": "prettier --check . && eslint .",
     "test:unit": "vitest",
-    "test": "npm run test:unit -- --run && npm run test:e2e",
-    "test:e2e": "playwright test"
+    "test": "npm run test:unit -- --run"
   },
   "devDependencies": {
     "@eslint/compat": "^1.2.3",
-    "@playwright/test": "^1.45.3",
     "@sveltejs/adapter-static": "^3.0.6",
     "@sveltejs/kit": "^2.9.0",
     "@sveltejs/vite-plugin-svelte": "^5.0.0",
